--- a/2 House Prices Analysis (Recommended 2)/House Prices Analysis.Rmd
+++ b/2 House Prices Analysis (Recommended 2)/House Prices Analysis.Rmd
@@ -3,20 +3,14 @@ title: "House Prices Analysis"
 author: "Tonatiuh De Leon"
 output: 
   html_document:
-    theme: cerulean
+    theme: default
     code_folding: hide
     keep_md: true
 editor_options: 
   chunk_output_type: console
 ---
 
-<br>
-
-[<span style="font-size: larger;">CLICK HERE TO SEE RENDRED HTML VERSION (Better Format)</span>](https://gentle-meringue-8bb3f3.netlify.app/)
-
-<br> 
-
-```{r libs, message=FALSE, warning=FALSE, echo=FALSE}
+```{r libs, message=FALSE, warning=FALSE}
 library(tidyverse)
 library(pander)
 library(gridExtra)
@@ -26,7 +20,7 @@ library(knitr)
 library(formattable)
 ```
 
-```{r wrangle, message=FALSE, warning=FALSE, echo=FALSE}
+```{r wrangle, message=FALSE, warning=FALSE}
 
 dt <- read_csv("train.csv") |> 
   rename(bsm = "TotalBsmtSF",
@@ -142,7 +136,7 @@ b <- coef(mylm)
 
 #### Introduction
 
-```{r plot, fig.width=10,fig.height=10, message=FALSE, warning=FALSE, echo=FALSE}
+```{r plot, fig.width=10,fig.height=10, message=FALSE, warning=FALSE }
 
 g10 <- ggplot(dt10, aes(tsf1,sp))+
   
@@ -154,23 +148,38 @@ g10 <- ggplot(dt10, aes(tsf1,sp))+
   
   stat_function(fun=function(x, oq1=10)
 
-    (b[1] + b[2]*1 + b[3]*1 + b[4]*3 + b[5]*1 + b[6]*1 + b[7]*1 + b[8]*20000) +
+    (b[1]#int
+     + b[2]*mean(dt10$nbd)#nbd
+     + b[3]*mean(dt10$bld1)#building type
+     + b[4]*3#bedr
+     + b[5]*mean(dt10$sc)#sc
+     + b[6]*mean(dt10$al)#alley
+     + b[7]*mean(dt10$gr)#gara
+     + b[8]*mean(dt10$LotArea)) +
 
-    (b[9]*oq1 + b[10]*oq1 + b[11]*1 + b[12]*1 + b[13]*2 + b[14]*3 + b[15]*1 + b[16]*1)*x, col="red") +
+    (b[9]*10 #oq
+     + b[10]*10 #oc1
+     + b[11]*mean(dt10$nbd) #nbd
+     + b[12]*mean(dt10$kq) #kq
+     + b[13]*2 #bath
+     + b[14]*3 #bdr
+     + b[15]*mean(dt10$ht) #ht
+     + b[16]*mean(dt10$fp) #fp
+     )*x, col="red") +
   
   theme_classic() +
   
   labs( 
     title = "House Rating: 10", 
-    subtitle = "20,000 ft Average Lot Area, all good quality factors, average of 3 bedrooms and 2 bathrooms.",
+    subtitle = "20,000 ft Lot, all good quality factors, avg of 3 bedrooms, 2 bathrooms.",
     x= "",
     y = "") +
   
   theme(
-    plot.title = element_text(size=11, color = "grey40"),
-    axis.text.x = element_text(color = "grey45"),
-    axis.text.y = element_text(color = "grey45"),
-    plot.subtitle = element_text(color = "grey45", size=7))
+    plot.title = element_text(size=12, color = "grey5"),
+    axis.text.x = element_text(color = "grey25"),
+    axis.text.y = element_text(color = "grey25"),
+    plot.subtitle = element_text(color = "grey25",   size=9))
 
   
 
@@ -192,15 +201,15 @@ g9 <- ggplot(dt9, aes(tsf1,sp))+
   
   labs( 
     title = "House Rating: 9", 
-    subtitle = "15,000 ft Average Lot Area, all good quality factors, average of 3 bedrooms and 2 bathrooms.",
+    subtitle = "15,000 ft Lot, all good quality factors, avg of 3 bedrooms, 2 bathrooms.",
     x = "",
-    y = "") +
+    y = "")  +
   
   theme(
-    plot.title = element_text(size=11, color = "grey40"),
-    axis.text.x = element_text(color = "grey45"),
-    axis.text.y = element_text(color = "grey45"),
-    plot.subtitle = element_text(color = "grey45", size=7))
+    plot.title = element_text(size=12, color = "grey5"),
+    axis.text.x = element_text(color = "grey25"),
+    axis.text.y = element_text(color = "grey25"),
+    plot.subtitle = element_text(color = "grey25",   size=9))
 
 g8 <- ggplot(dt8, aes(tsf1,sp))+
   
@@ -222,13 +231,13 @@ g8 <- ggplot(dt8, aes(tsf1,sp))+
     title = "House Rating: 8", 
     x = "",
     y = "",
-    subtitle = "12,000 ft Average Lot Area, all good quality factors, average of 3 bedrooms and 2 bathrooms.") +
+    subtitle = "12,000 ft Lot, all good quality factors, avg of 3 bedrooms, 2 bathrooms.") +
   
   theme(
-    plot.title = element_text(size=11, color = "grey40"),
-    axis.text.x = element_text(color = "grey45"),
-    axis.text.y = element_text(color = "grey45"),
-    plot.subtitle = element_text(color = "grey45", size=7))
+    plot.title = element_text(size=12, color = "grey5"),
+    axis.text.x = element_text(color = "grey25"),
+    axis.text.y = element_text(color = "grey25"),
+    plot.subtitle = element_text(color = "grey25",   size=9))
 
 
 g7 <- ggplot(dt7, aes(tsf1,sp))+
@@ -251,13 +260,13 @@ g7 <- ggplot(dt7, aes(tsf1,sp))+
     title = "House Rating: 7", 
     x = "",
     y = "",
-    subtitle = "10,000 ft Average Lot Area, all good quality factors, average of 2 bedrooms and 2 bathrooms.") +
+    subtitle = "10,000 ft Lot, all good quality factors, avg of 2 bedrooms, 2 bathrooms.") +
   
   theme(
-    plot.title = element_text(size=11, color = "grey40"),
-    axis.text.x = element_text(color = "grey45"),
-    axis.text.y = element_text(color = "grey45"),
-    plot.subtitle = element_text(color = "grey45", size=7))
+    plot.title = element_text(size=12, color = "grey5"),
+    axis.text.x = element_text(color = "grey25"),
+    axis.text.y = element_text(color = "grey25"),
+    plot.subtitle = element_text(color = "grey25",   size=9))
 
 g6 <- ggplot(dt6, aes(tsf1,sp))+
   
@@ -279,13 +288,13 @@ g6 <- ggplot(dt6, aes(tsf1,sp))+
     title = "House Rating: 6", 
     x = "",
     y = "",
-    subtitle = "10,000 ft Average Lot Area, all good quality factors, average of 2 bedrooms and 2 bathrooms.") +
+    subtitle = "10,000 ft Lot, all good quality factors, avg of 2 bedrooms, 2 bathrooms.") +
   
   theme(
-    plot.title = element_text(size=11, color = "grey40"),
-    axis.text.x = element_text(color = "grey45"),
-    axis.text.y = element_text(color = "grey45"),
-    plot.subtitle = element_text(color = "grey45", size=7))
+    plot.title = element_text(size=12, color = "grey5"),
+    axis.text.x = element_text(color = "grey25"),
+    axis.text.y = element_text(color = "grey25"),
+    plot.subtitle = element_text(color = "grey25",   size=9))
 
 g5 <- ggplot(dt5, aes(tsf1,sp))+
   
@@ -307,13 +316,13 @@ g5 <- ggplot(dt5, aes(tsf1,sp))+
     title = "House Rating: 5", 
     x = "",
     y = "",
-    subtitle = "10,000 ft Average Lot Area, all good quality factors, average of 2 bedrooms and 2 bathrooms.") +
+    subtitle = "10,000 ft Lot, all good quality factors, avg of 2 bedrooms, 2 bathrooms.") +
   
   theme(
-    plot.title = element_text(size=11, color = "grey40"),
-    axis.text.x = element_text(color = "grey45"),
-    axis.text.y = element_text(color = "grey45"),
-    plot.subtitle = element_text(color = "grey45", size=7))
+    plot.title = element_text(size=12, color = "grey5"),
+    axis.text.x = element_text(color = "grey25"),
+    axis.text.y = element_text(color = "grey25"),
+    plot.subtitle = element_text(color = "grey25",   size=9))
 
 g4 <- ggplot(dt4, aes(tsf1,sp))+
   
@@ -335,41 +344,45 @@ g4 <- ggplot(dt4, aes(tsf1,sp))+
     title = "House Rating: 4", 
     x = "",
     y = "",
-    subtitle = "8,000 ft Average Lot Area, all good quality factors, average of 1 bedrooms and 2 bathrooms.") +
+    subtitle = "8,000 ft Lot, all good quality factors, avg of 1 bedrooms, 2 bathrooms.") +
   
   theme(
-    plot.title = element_text(size=11, color = "grey40"),
-    axis.text.x = element_text(color = "grey45"),
-    axis.text.y = element_text(color = "grey45"),
-    plot.subtitle = element_text(color = "grey45", size=7))
+    plot.title = element_text(size=12, color = "grey5"),
+    axis.text.x = element_text(color = "grey25"),
+    axis.text.y = element_text(color = "grey25"),
+    plot.subtitle = element_text(color = "grey25",   size=9))
 
 
 grid.arrange(g10, g9, g8, g7, g6, g5, g4,
              ncol = 2, nrow = 4,
-             top = textGrob("House Selling Prices", gp = gpar(fontsize = 12, col = "black")),
-             left = textGrob("Selling Prices (Thousands)", rot = 90, gp = gpar(fontsize = 12)),
-             bottom = textGrob("Total Square Footage", gp = gpar(fontsize = 12))
+             top = textGrob("House Selling Prices", gp = gpar(fontsize = 14, col = "black")),
+             left = textGrob("Selling Prices (Thousands)", rot = 90, gp = gpar(fontsize = 14)),
+             bottom = textGrob("Total Square Footage", gp = gpar(fontsize = 14))
              )
 
 ```
 
 <br> <br>
 
-This analysis helps in considering the possibility that there are multiple factors driving the differences in selling prices for a house. The survey data set to which this regression model was applied can be found in [Kaggle](https://www.kaggle.com/competitions/house-prices-advanced-regression-techniques/data) as one of their real world surveys (See Data Set tab to explore all the possible variables).
+$$ \text{Model Equation:} \\\ \ \text{Selling Price}_{y_i} = b_0 \ + \text{Neighborhood}_{b_1} + \text{Has Alley}_{b_2} + \text{Has Garage}_{b_3} + \\\ \ \text{Number of Bedrooms}_{b_4} + \text{Building Type}_{b_5} + \text{Sale Condition}_{b_6} + \text{Lot Area}_{b_7} + \\\ \ \text{Total Square Feet} \cdot \text{Overall Quality}_{b_8} + \text{Total Square Feet} \cdot \text{Average Quality}_{b_9} + \\\ \ \text{Total Square Feet} \cdot \text{Neighborhood}_{b_{10}} + \text{Total Square Feet} \cdot \text{Kitchen Quality}_{b_{11}} + \\\ \ \text{Total Square Feet} \cdot \text{Number of Bathrooms}_{b_{12}} + \\\ \ \text{Total Square Feet} \cdot \text{Number of Bedrooms}_{b_{13}} + \\\ \ \text{Total Square Feet} \cdot \text{Heating System Quality}_{b_{14}} + \\\ \ \text{Total Square Feet} \cdot \text{Has Fireplace}_{b_{15}}$$
 
-I created a ranking system for the houses in the survey based on the amount of factors and utilities it includes, as well as their quality. This is a single model that supposes that a good quality house should include the most of many factors driving their selling prices in it and have the best quality possible. This way a House can be considered of good quality taking it to higher rankings; for example a good sized Lot Area in the house, a good quality kitchen, average or higher number of bedrooms, among other variables. This line of thought is the basis of my current model. The graph was divided per each house rating group from 4-10 to visually see the difference in a 2D graph. (Groups 1-3 weren't as significant so, I added them with group 4).
+<br>
 
-When analyzing the graphs consider their differences at their x and y axis. Looking at them from left to right, top to bottom; We see that quality 10 houses are generally larger in total square footage and are sold by much more than the other types of quality homes. this could also be said about rank 9, however at rank 8 we see a significant drop in maximum selling price as seen in its Y axis as compared to the previous graphs. This means that as the houses start to get lower in quality, and in size, their selling prices become smaller as well. These graphs are also only a simple representation of multiple slices of this regression model that align to the scenarios depicted on each of the subtitles. These scenarios represent the average factor per quality rating. How can we tell if a house is of good quality? We may need to consider many factors and put them at play in this regression model. 
+This analysis helps consider the possibility that there are multiple factors driving the differences in selling prices for a house. The survey data set to which this regression model was applied can be found on [Kaggle](https://www.kaggle.com/competitions/house-prices-advanced-regression-techniques/data) as one of their real-world surveys (See Data Set tab to explore all the possible variables).
 
-Consider reading further in the explanatory variables and model summary tabs for deeper understanding on how this model works.
+I created a ranking system for the houses in the survey based on the number of factors and utilities they include, as well as their quality. This is a single model that assumes a good-quality house should include as many of the factors driving its selling prices as possible and have the best quality. This way, a house can be considered of good quality, leading to higher rankings; for example, a good-sized lot area, a good-quality kitchen, an average or higher number of bedrooms, among other variables. This line of thought is the basis of my current model. The graph was divided by each house rating group from 4 to 10 to visually see the difference in a 2D graph. (Groups 1-3 weren’t as significant, so I added them with group 4).
+
+When analyzing the graphs, consider the differences in their x and y axes. Looking at them from left to right, top to bottom, we see that quality 10 houses are generally larger in total square footage and are sold for much more than the other types of quality homes. This could also be said about rank 9; however, at rank 8, we see a significant drop in maximum selling price, as seen in its y-axis compared to the previous graphs. This means that as the houses start to get lower in quality and size, their selling prices become smaller as well. These graphs are a simple representation of multiple slices of this regression model that align with the scenarios depicted in each of the subtitles. These scenarios represent the average factor per quality rating. How can we tell if a house is of good quality? We may need to consider many factors and bring them into play in this regression model.
+
+Consider reading further in the Explanatory Variables and Model Summary tabs for a deeper understanding of how this model works.
 
 <br><br>
 
 #### Explanatory Variables
 
-Now, what explanatory variables were used for this model? If we consider a house gains it's value depending on multiple factors, then there are multiple explanatory variables that could be used to get a regression model to predict house selling prices.
+Now, what explanatory variables were used for this model? If we consider a house gains its value depending on multiple factors, then there are multiple explanatory variables that could be used to get a regression model to predict house selling prices.
 
-The most clear ones would be:
+The clearest ones would be:
 
 <br>
 
@@ -399,7 +412,7 @@ Then there may be others that could appear to not be as obvious, but by using re
 
 10. <span style="color: #0047AB;">Location (Specifically the type of neighborhood the house is in; a measurement of rich neighborhoods as per seen in the distributions of the houses [Distributions Tab, Fig 2] made it to the final model)</span>
 
-11. <span style="color: #0047AB;">Sale Condition (More regular types of deals tend to be a factor of selling prices; for example a sell between two completely separate parties through a real state agency as opposed to a family type of deal where the house is sold between family members [Distributions Tab, Fig 3])</span>
+11. <span style="color: #0047AB;">Sale Condition (More regular types of deals tend to be a factor of selling prices; for example a sale between two completely separate parties through a real state agency as opposed to a family type of deal where the house is sold between family members [Distributions Tab, Fig 3])</span>
 
 12. <span style="color: #0047AB;">Lot Area of the property is an important factor to consider.</span>
 
@@ -417,7 +430,7 @@ Finally we have a couple of factors that appear to be significant when consideri
 
 <br>
 
-When used in the final model, all of these variables are significant and contribute (even if too little) to the final predictive model used for this data set. However this doesn't mean that these are the only ones that should be included in the model.
+When used in the final model, all of these variables are significant and contribute (even if too little) to the final predictive model used for this data set. However, this doesn't mean that these are the only ones that should be included in the model.
 
 <br> <br>
 
@@ -425,11 +438,7 @@ When used in the final model, all of these variables are significant and contrib
 
 <br>
 
-$$ Math \ Equation \ and \ Model \ Summary \:  \\\ \\\ \ Selling \ Price_i = Neighborhood_i + Has \ Alley_i + Has \ Garage_i + Number \ of \ Bedrooms_i +  Building \ Type_i + \\ \ Sale \ Condition_i + Lot \ Area_i + Total \ Square \ Feet_i \cdot Overall \ Quality_i + Total \ Square \ Feet_i \cdot Average \ Quality_i + \\ \ Total \ Square \ Feet_i \cdot Neighborhood_i + Total \ Square \ Feet_i \cdot Kitchen_i \ Quality_i + Total \ Square \ Feet_i \cdot Number \ of \ Bathrooms_i + \\ \ Total \ Square \ Feet_i \cdot Number \ of \ Bedrooms_i + Total \ Square \ Feet_i \cdot Heating \ System \ Quality_i + Total \ Square \ Feet_i \cdot Has \ Fireplace_i$$
-
-<br>
-
-```{r model summary, message=FALSE, warning=FALSE, echo=FALSE}
+```{r model summary, message=FALSE, warning=FALSE }
 cap <- paste(
   "nbd = Neighborhood | bld1 = Building Type | bdr = Number of Bedrooms |",
   "sc = Sell Condition | al = Alley Included | gr = Garage Quality |",
@@ -442,17 +451,19 @@ pander(summary(mylm), caption = cap)
 ```
 
 <br>
-With all of these factors in mind, and by adding some interaction terms between these factors and our quantitative variable (Total Square Feet), we get to this final model. I consider it to be significant because of the significance in its terms (all significant terms at .05 alpha level), a considerable R^2^ of .90, and an even better validation R^2^ of .91 that came in place by using the mathematical regression equation presented above to predict Y which in this case is house selling prices; Where all of this variables can be modified to predict for specific types of homes and multiple different scenarios (See conclusion and interpretation tab).
+With all of these factors in mind, and by adding interaction terms between these factors and our quantitative variable (Total Square Feet), we arrive at this final model. This model can be considered relevant because of the significance of its terms (all significant at the 0.05 alpha level), a considerable R^2^ of 0.90, and an even better validation R^2^ of 0.91. Thus achieving high accuracy when predicting house selling prices. Also, the use cases are many since all of these variables can be modified to predict for specific types of homes and multiple different scenarios (see Conclusion and Interpretation tab).
 
-With a Residual Standard Error of $25,000 this model comes closer to being more accurate than previous ones I tried. My claim is that this model works for it's purposes even when tested in different conditions it performs equally good or even better when validated. The slope coefficients of this model represent the change in the dependent variable for a one-unit increase in the corresponding predictor, holding all other predictors constant. this is why, the slope's interpretation can vary depending on the specific factors involved in the model and their coefficients. 
+With a Residual Standard Error of $25,000, this model comes closer to being more accurate than previous ones I tried. My claim is that this model works for its purposes; even when tested in different conditions, it performs equally well or even better when validated. The slope coefficients of this model represent the change in the dependent variable for a one-unit increase in the corresponding predictor, holding all other predictors constant. This is why the slope’s interpretation can vary depending on the specific factors involved in the model and their coefficients.
 
-For instance, consider the influence of the overall quality factor. As we move from a lower quality rating (e.g., 4) to a higher rating (e.g., 10), the impact on the slope may become more pronounced. This suggests that the relationship between the predictor and the dependent variable becomes increasingly influential as the overall quality improves. However, it's essential to note that the significance of the slope and its direction can vary across different scenarios, depending on the specific context and the interactions among predictor variables. Therefore, interpreting the slope requires careful consideration of the coefficients and their associated significance levels within the given regression model. It wouldn't be applicable to say that there is only one overall slope for this model, rather that they are hard to count because there are too many possible slope scenarios depending on what variables you choose to use.
+For instance, consider the influence of the overall quality factor. As we move from a lower quality rating (e.g., 4) to a higher rating (e.g., 10), the impact on the slope becomes more pronounced. This suggests that the relationship between the predictor and the dependent variable becomes increasingly influential as the overall quality improves. However, it is essential to note that the significance of the slope and its direction can vary across different scenarios, depending on the specific context and the interactions among predictor variables. Therefore, interpreting the slope requires careful consideration of the coefficients and their associated significance levels within the given regression model. It wouldn’t be accurate to say that there is only one overall slope for this model; rather, they are hard to count because there are too many possible slope scenarios depending on which variables you choose to use.
 
-This can be proven by considering the following scenario. It will show the predictions for quality group 8 for 2000 Total sqft, and 3000 respectively:
+This can be proven by considering the following scenario. It will show the predictions for quality group 8 for 2000 total square feet and 3000 total square feet, respectively:
+
+
 
 <br>
 
-```{r, message=FALSE, warning=FALSE, echo=FALSE}
+```{r, message=FALSE, warning=FALSE }
 
 pr1 <- predict(
   mylm,
@@ -521,7 +532,7 @@ Consider this next prediction of an imaginary house with 10,000 sqft lot area, 2
 
 <br>
 
-```{r predict1, message=FALSE, warning=FALSE, echo=FALSE}
+```{r predict1, message=FALSE, warning=FALSE }
 pr <- predict(
   mylm,
   newdata = data.frame(
@@ -554,7 +565,7 @@ Now try to match 2000 sqft (x axis) in quality rating 10 group with it's regress
 
 <br>
 
-```{r predict2, message=FALSE, warning=FALSE, echo=FALSE}
+```{r predict2, message=FALSE, warning=FALSE }
 pr <- predict(
   mylm,
   newdata = data.frame(
@@ -587,7 +598,7 @@ The predicted value changed so much that the house price dropped by almost 50 th
 
 <br>
 
-```{r predict3, message=FALSE, warning=FALSE, echo=FALSE}
+```{r predict3, message=FALSE, warning=FALSE }
 pr <- predict(
   mylm,
   newdata = data.frame(
@@ -622,7 +633,7 @@ The model can show as well the best case scenarios for a house. For example let'
 
 <br>
 
-```{r predict4, message=FALSE, warning=FALSE, echo=FALSE}
+```{r predict4, message=FALSE, warning=FALSE }
 pr <- predict(
   mylm,
   newdata = data.frame(
@@ -664,7 +675,7 @@ The regression model constructed in this analysis demonstrates the significance 
 Here You'll find a brief summary of a few distributions I considered to be relevant, and the reason why I added them as an explanatory factor for house prices; You can read as well how these factors come into play and how they are used in the model.
 
 <br>
-```{r boxplot1, message=FALSE, warning=FALSE, echo=FALSE}
+```{r boxplot1, message=FALSE, warning=FALSE }
 ggplot(dt, aes(bld, sp))+
   geom_boxplot(show.legend = F, col="grey30", fill="orange") +
   theme_bw() +
@@ -682,7 +693,7 @@ I analyzed this boxplot to choose what Building types to include in my two categ
 
 <br>
 
-```{r boxplot2, message=FALSE, warning=FALSE, echo=FALSE}
+```{r boxplot2, message=FALSE, warning=FALSE }
 ggplot(dt, aes(Neighborhood, sp))+
   geom_boxplot(show.legend = F, col="grey30", fill="orange") +
   theme_bw() +
@@ -701,7 +712,7 @@ The same thought process was considered here. If any house was within rich neigh
 
 <br>
 
-```{r boxplot 3, message=FALSE, warning=FALSE, echo=FALSE}
+```{r boxplot 3, message=FALSE, warning=FALSE }
 ggplot(dt, aes(SaleCondition, sp))+
   geom_boxplot(show.legend = F, col="grey30", fill="orange") +
   theme_bw() +
@@ -725,7 +736,7 @@ Here the variable was a little different to determine, however the boxplot helpe
 ## Diagnostic Plots
 
 <br>
-```{r diagnostic1, message=FALSE, warning=FALSE, echo=FALSE}
+```{r diagnostic1, message=FALSE, warning=FALSE }
 par(mfrow=c(1,2))
 plot(mylm,which=1)
 plot(mylm$residuals)
@@ -733,11 +744,11 @@ plot(mylm$residuals)
 
 <br>
 
-Diagnostic plots don't look too promising. Variance has the appearance of being inconstant, but that may or may not be the case. Because of all the other factors (significance in the model, good validation) we will proceed with the analysis.
+Diagnostic plots look somewhat ok. Variance has the appearance of being inconstant, but it can be inconclusive. Because of all the other factors (large sample size, significance in the model, good validation) we will proceed with the analysis.
 
 <br>
 
-```{r diagnostic2, message=FALSE, warning=FALSE, echo=FALSE}
+```{r diagnostic2, message=FALSE, warning=FALSE }
 par(mfrow=c(1,2))
 plot(mylm,which=2)
 hist(dt$tsf1, xlab="", xaxt='n', yaxt='n', main="Total Squared Footage", col="firebrick")
@@ -745,7 +756,7 @@ hist(dt$tsf1, xlab="", xaxt='n', yaxt='n', main="Total Squared Footage", col="fi
 
 <br>
 
-Normality however, can't be denied to be abnormal. It has more of a heavy tailed, left skewed distribution (not helpful for analysis). But because normality is is the least of the problems when running diagnostics, we will still continue to test the data with this model. 
+Normality however, can't be denied to be abnormal. It has more of a heavy tailed, right skewed distribution (not helpful for analysis). As mentioned in the paragraph above, we have many reasons to still continue with the analysis. 
 
 As a note, I did try transforming the data, however I did not find any significance by doing so. That may have helped to make these diagnostics look better.
 
@@ -755,7 +766,7 @@ As a note, I did try transforming the data, however I did not find any significa
 
 <br>
 
-```{r validations, message=FALSE, warning=FALSE, echo=FALSE}
+```{r validations, message=FALSE, warning=FALSE }
 set.seed(13)
 
 num_rows <- 1000 #1460 total
@@ -824,7 +835,7 @@ This double validation process will help the model to be tested in a different e
 
 This means there is significance in the model, and that the approach to the true parameters of this data (if any), is not lost. 
 
-Validation for this model appears to have good results. Both validations worked out postively for the model at hand. The first one went down in r^2^ by .01, the second one went up by .01. It seems that the average is the model's original R^2^ of .90 which makes the model reliable.
+Validation for this model appears to have good results. Both validations worked out positively for the model at hand. The first one went down in R^2^ by .01, the second one went up by .01. It seems that the average is the model's original R^2^ of .90 which makes the model reliable.
 
 <br><br>
 
@@ -836,7 +847,7 @@ The data table for this regression model originally had less columns. I mutated 
 
 <bt><br>
 
-```{r dataset, message=FALSE, warning=FALSE, echo=FALSE}
+```{r dataset, message=FALSE, warning=FALSE }
 datatable(dt)
 ```
 
