--- a/3 Car Analysis (Recommended 3)/Car Analysis.Rmd
+++ b/3 Car Analysis (Recommended 3)/Car Analysis.Rmd
@@ -1,10 +1,9 @@
 ---
 title: "Car Analysis | Predicting selling point"
 author: "Tonatiuh De Leon"
-date: "March 18, 2024"
 output: 
   html_document:
-    theme: cerulean
+    theme: default
     code_folding: hide
     keep_md: true
 editor_options: 
@@ -13,16 +12,20 @@ editor_options:
 
 <br>
 
-[<span style="font-size: larger;">CLICK HERE TO SEE RENDRED HTML VERSION (Better Format)</span>](https://zesty-kheer-8ce4a9.netlify.app/)
+This analysis will use a linear model to predict the selling price of my vehicle when it reaches 220,000 miles, assuming an annual usage of 20,000 to 25,000 miles. To estimate the selling price, I will fit a simple regression model shown below, and then we will analyze its results to determine if it is reliable.
 
-<br> 
-This analysis will use a linear model to predict the selling price for my vehicle when it reaches 220,000 miles.This is assuming every year I’ve been using it for 20\~25 thousand miles. To know what price do I see myself selling it at, I'm going to use the linear model formula. After performing the regression model, we'll analyze it to see if it can be trusted or not.
 <br>
+
 $$
   \underbrace{{Y}_i}_\text{Predicted Price} = \overbrace{b_0}^\text{est. y-int} + \overbrace{b_1}^\text{est. slope} \underbrace{X_i}_\text{Mileage}
 $$ 
+$$
+\text{.05 Alpha Level Considered for Slopes and Intercepts Statistical Significance} 
+$$
+
 <br> 
-I did both the original linear model, and the transformation recommended by the Box Cox method (Diagnostics and formulas at the end of the analysis), check them out in the tabs below.
+
+When performing the regression analysis on this data, I noticed that a Box-Cox transformation was recommended. Therefore, I proceeded to model both a simple linear model and the transformed version. The transformed model, incidentally, turned out to be the better of the two. You can find the details for both models in the tabs below.
 
 <br>
 
@@ -32,15 +35,14 @@ I did both the original linear model, and the transformation recommended by the 
 
 <br>
 
-```{r setup, echo=FALSE, include=FALSE}
+```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.align='center', fig.width=10}
+
 library(tidyverse)
 library(MASS)
 library(pander)
+library(ggrepel)
 
 car_analysis <- read_csv("car_analysis.csv")
-```
-
-```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.align='center', fig.width=10}
 
             #Linear Models and Transformations
 
@@ -50,90 +52,77 @@ CarlmSqrt <- lm(sqrt(price)~mileage, data=car_analysis)
 PredictedSell <- predict(CarlmSqrt, data.frame(mileage=220000))^2
 bs <- coef(CarlmSqrt)
 
-            #Base Plot with all data and curved lm
+  #Graph begins
 
-ggplot(data=car_analysis, mapping = aes(x=mileage, y=price))+
-  geom_point(col="black")+
-  stat_function(fun=function(x) (bs[1]+(bs[2]*x))^2,col="steelblue", linewidth = 1)+
+ggplot(data = car_analysis, mapping = aes(x = mileage, y = price)) +
   
-            #added original LM Just in case
+  #Data Points
   
-     geom_smooth(method = "lm", se = FALSE, color = "lightgrey", linetype="dotted")+
+  geom_point(color = "grey35", fill = "grey", shape=21, size=2.4, alpha=.5) +
   
-    
-            #Joining The points
+  # Transformed Model
+  stat_function(fun = function(x) (bs[1] + (bs[2] * x))^2, color = "steelblue", linewidth = 1.2) +
   
-  geom_line(data=data.frame(mileage=c(128000, 220000), price=c(3300, PredictedSell)), aes(x=mileage, y=price), color="black") + 
+  # Line Between Points
+  geom_line(data = data.frame(mileage = c(128000, 220000), price = c(3300, PredictedSell)), 
+            aes(x = mileage, y = price), color = "black", linewidth = 1, linetype = "dotted") + 
   
-            #Predicted Purchasing Point  
+  # Predicted Points
+  geom_point(aes(x = 128000, y = 3300), size = 6, shape = 21, fill = "darkseagreen", show.legend = F) +
   
-  geom_point(aes(x= 128000, y= 3300, color="Buy Point"), size=3)+
+  geom_point(data = data.frame(mileage = 220000, price = PredictedSell), 
+             aes(x = mileage, y = price), size = 6, shape = 21, fill = "orange", show.legend = F)+
   
-            #Predicted Selling Point
+  # Text Labels for Predicted Points
+
+geom_label(data = data.frame(x = 128000, y = 1600), aes(x = x, y = y, label = "Bought for $3,300"), size = 4) +
   
-  geom_point(data=data.frame(mileage=220000, price=PredictedSell), aes(x=mileage, y=price, color="Sell Point"), size=3)+
+geom_label(data = data.frame(x = 220000, y = 2100), 
+                 aes(x = x, y = y, label = "Estimated Sale of $3,682")) +
   
-            #X and Y
+  # Customize Axes
+  scale_x_continuous(breaks = seq(0, 250000, by = 50000), labels = c("0", "50,000", "100,000", "150,000", "200,000", "250,000")) +
+  scale_y_continuous(breaks = seq(0, 20000, by = 5000), labels = c("0", "$5,000", "$10,000", "$15,000", "$20,000")) +
   
-  scale_x_continuous(breaks = seq(0,250000,by=50000), labels = c("0","50,000","100,000","150,000","200,000","250,000")) +
-  
-  scale_y_continuous(breaks = seq(0,20000,by=5000), labels = c("0","$5,000","$10,000","$15,000","$20,000")) +
-  
-            #Adding my labels and Theme  
-  
+  # Labels and Theme
   labs(
-    x="Mileage",
-    y="Price in Dollars",
-    title="Car price analysis based on mileage",
-    col="buy and sell point"
-  )+
-  theme_bw()+
-  theme(plot.title = element_text(hjust = 0.5, size=12),
-        axis.title = element_text(size=10),
-        axis.title.x = element_text(vjust = -1.5),
-        axis.title.y = element_text(vjust = 3.5),
-        axis.text = element_text(size=8),
-        legend.text = element_text(size = 8),
-        legend.title = element_text(size = 10),
-        plot.margin = margin(.5, .5, .5, .5, "cm"))
+    x = "Mileage",
+    y = "Price",
+    title = "Ford Fusion Prices by Mileage",
+    col = "Transaction Points"
+  ) +
+  theme_classic() +
+  theme(
+    plot.title = element_text(hjust = 0.5, size = 14, color="grey5"),
+    axis.title = element_text(size = 12, color="grey15"),
+    axis.text = element_text(size = 11, color="grey25"),
+    plot.margin = margin(0.5, 0.5, 0.5, 0.5, "cm")
+  )
+
 ```
 
-<br> <br>
+<br>
 
-Here is my transformed linear model graph. I originally did this
-prediction with a simple linear model (take a look at it in the next
-tab). After setting it up, I ran a Box Cox test to see if there were any
-suggested transformations to the linear model. Surely enough I was
-suggested to make a Square Root transformation (Lambda of .54), and then
-I got the graph above, you can still see the original linear model as a
-light grey line in the background.
+Here is the graph of my transformed linear model. I initially made this prediction using a simple linear model (you can view it in the next tab). After setting it up, I performed a Box-Cox test to identify any recommended transformations. As expected, the test suggested a square root transformation (with a lambda of 0.54), resulting in the graph above. You can still see the original linear model as a light grey line in the background.
 
-<br> 
+I want to emphasize that the purpose of this model is to predict a realistic selling price for my car. A good measure for this is the slope between the buying and selling points. This slope represents an increase in value per mile driven of **$0.0042**. This calculation comes from taking the difference in price between the selling and buying points and dividing it by the mileage difference.
 
-I want to emphasize the purpose of this model is to make a
-prediction of the price in which I realistically could sell my car. A
-good measurement of this is the slope in which my buying point and my
-selling point meet. This slope represent an increase in dollars for each
-mile driven of $0.0042$ dollars. This calculation was taken from taken
-the difference from the selling point to the buying point in price and
-diving it by the mileage difference. <br> This means that my predicted
-selling price will be $3681.817$ Dollars! Amazing huh? This model is
-saying that, even if I sell my car after driving it around 100K miles,
-I'd still be getting 300 dollars in return. <br> This transformed model
-makes sense to me because used cars don't usually go to complete zero,
-you can sell it by parts even after it's considered junk and still get
-some money back. <br> Let's take a look at the statistical summary of
-the model. <br> <br>
+Based on this, my predicted selling price could be of **$3,682**! Not bad, right? This model suggests that even if I sell my car after driving it for another 100,000 miles, I could still get around 300 dollars in return.
+
+This transformed model makes sense to me because used cars rarely depreciate to zero; even when considered junk, they can be sold for parts, allowing you to recover some money.
+
+Now, let's take a look at the statistical summary of the model.
+
+<br>
 
 ```{r}
 summary(CarlmSqrt) %>% 
   pander()
 ```
 
-<br> <br> 
-In my opinion, things look good so far to make this model
-trustable, R^2^ is close to $.90$ and both p values are low enough to
-trust the model.
+<br> 
+
+In my opinion, things look good in this model's summary. With an R^2^ close to **.90** and both p values being low enough, it would be safe to trust the model's accuracy after checking if requirements are met in the diagnostics.
 
 <br> <br>
 
@@ -142,74 +131,69 @@ trust the model.
 <br>
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.align='center', fig.width=10}
+
 carLm <- lm(price~mileage, data=car_analysis)
 PredictedSell2 <- predict(carLm, data.frame(mileage=220000))
 
-
-            #Here is the base point plot and line
-
-ggplot(data=car_analysis, mapping = aes(x=mileage, y=price))+
-  geom_point(col="black")+
-  geom_smooth(method="lm", formula=y~x, se=F, col="steelblue")+
+ggplot(data = car_analysis, mapping = aes(x = mileage, y = price)) +
   
-    
-            #Joining The points
+  # Linear Model
+  geom_smooth(method = "lm", se = FALSE, color = "steelblue4", linewidth = 1.3) +
   
-  geom_line(data=data.frame(mileage=c(128000, 220000), price=c(3300, PredictedSell2)), aes(x=mileage, y=price), color="black") + 
+  #Data Points
   
-            #Predicted Buying Point
-  
-   geom_point(aes(x= 128000, y= 3300, color="Buy Point"), size=3)+
-  
-            #Predicted Selling Point
-  
-  geom_point(data=data.frame(mileage=220000, price=PredictedSell2), aes(x=mileage, y=price, color="Sell Point"), size=3)+
-  
-            #X and Y
-  
-  scale_x_continuous(breaks = seq(0,250000,by=50000), labels = c("0","50,000","100,000","150,000","200,000","250,000")) +
-  
-  scale_y_continuous(breaks = seq(0,20000,by=5000), labels = c("0","$5,000","$10,000","$15,000","$20,000")) +
+  geom_point(color = "grey35", fill = "grey", shape=21, size=2, alpha=.5) +
 
   
-            #Adding my labels and Theme  
+  # Line Between Points
+  geom_line(data = data.frame(mileage = c(128000, 220000), price = c(3300, PredictedSell2)), 
+            aes(x = mileage, y = price), color = "black", linewidth = 1, linetype = "dotted") + 
   
+  # Predicted Points
+  geom_point(aes(x = 128000, y = 3300), size = 7, shape = 21, color= "darkgreen", fill = "darkseagreen", show.legend = F) +
+  
+  geom_point(data = data.frame(mileage = 220000, price = PredictedSell2), 
+             aes(x = mileage, y = price), size = 7, shape = 21, color="orange4", fill = "orange", show.legend = F)+
+  
+  # Text Labels for Predicted Points
+
+geom_label(data = data.frame(x = 128000, y = 1600), aes(x = x, y = y, label = "Bought for $3,300"), size = 4) +
+  
+geom_label(data = data.frame(x = 220000, y = 1100), 
+                 aes(x = x, y = y, label = "Estimated Sale of $2,850")) +
+  
+  # Customize Axes
+  scale_x_continuous(breaks = seq(0, 250000, by = 50000), labels = c("0", "50,000", "100,000", "150,000", "200,000", "250,000")) +
+  scale_y_continuous(breaks = seq(0, 20000, by = 5000), labels = c("0", "$5,000", "$10,000", "$15,000", "$20,000")) +
+  
+  # Labels and Theme
   labs(
-    x="Mileage",
-    y="Price in Dollars",
-    title="Car price analysis based on mileage",
-    col="buy and sell point"
-  )+
-  theme_bw()+
-  
-            #Final touch
-  
-  theme(plot.title = element_text(hjust = 0.5, size=12),
-        axis.title = element_text(size=10),
-        axis.title.x = element_text(vjust = -1.5),
-        axis.title.y = element_text(vjust = 3.5),
-        axis.text = element_text(size=8),
-        legend.text = element_text(size = 8),
-        legend.title = element_text(size = 10),
-        plot.margin = margin(.5, .5, .5, .5, "cm"))
+    x = "Mileage",
+    y = "Price",
+    title = "Ford Fusion Prices by Mileage",
+    col = "Transaction Points"
+  ) +
+  theme_classic() +
+  theme(
+    plot.title = element_text(hjust = 0.5, size = 14, color="grey5"),
+    axis.title = element_text(size = 12, color="grey15"),
+    axis.text = element_text(size = 11, color="grey25"),
+    plot.margin = margin(0.5, 0.5, 0.5, 0.5, "cm")
+  )
   
 ```
 
-<br> <br> 
+<br>
 
-This is my original linear model. It's easy to spot some differences for
-example, the slope in the line joining my buying and selling points is
-negative here, with a negative slope of $-0.0048$ Dollars per mile. In
-the end this leads us to a predicted selling point of $2849.73$ Dolars!
-This is surely not a bad money, but it's also important to consider the
-factors that made the data transformable, such as cars not going to
-zero, and also a better fit as the data goes to larger mileage
-quantities. <br> I find it interesting on how both predictions are
-close, but even if they're close, there's a 600 dollars difference,
-which could make a difference.
+This is my original linear model. Notably, the slope of the line connecting my buying and selling points is negative, with a slope of **$0.0048** dollars per mile. 
 
-Let's see how the stat summary went for this model.
-<br> <br> 
+Consequently, this model predicts a selling price of **$2,849.73**, which is almost $800 lower than the transformed model. While this amount is not insignificant, it’s important to consider factors that affect the data, such as the fact that cars don’t depreciate to zero and that the model may fit better for higher mileages.
+
+I find it interesting that both predictions are close, yet there is a $800 difference between them, which could be quite significant.
+
+Let's now review the statistical summary of this model.
+
+<br>
 
 ```{r}
 summary(carLm) %>% 
@@ -218,8 +202,7 @@ summary(carLm) %>%
 
 <br> <br> 
 
-In my opinion this model isn't bad as well, it has a nice R^2^ of $.87$.
-As well as really low P. values.
+In my opinion this model isn't bad as either, it has a nice R^2^ of **.87**. As well as significant P. values at the alpha level of .05.
 
 I still prefer the transformed model because of how it fits the data in
 a better way.
@@ -232,21 +215,20 @@ a better way.
 
 ##### Box Cox Transformation Process
 
-<br> <br>
+<br>
 
 To check for transformations possibilities I ran a Box Cox test on my linear model and got the next graph.
-<br> <br>
 
-```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.align='center', fig.width=10}
+```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.align='center'}
 
 boxcox_result <- boxcox(carLm)
 ```
 
-<br> <br>
+At simple view we can guess that there is a .5 (Square Root) transformation suggested. I went ahead and checked my Lambda value and got a **0.55**. This confirmed a Square Root transformation would be appropriate. 
 
-At simple view we can guess that there is a .5 (Square Root) transformation suggested. I went ahead and checked my Lambda value and got a $0.55$. This confirmed a Square Root transformation would be appropiate. 
+To apply this transformation, you need to take the square root of your Y values in the linear model and then adjust your model using the transformed Y intercept and slope, as shown below.
 
-To do this you have to Square Root your Y values in your linear model, and transform your model as shown below using the transformed Y intercept and slope.
+<br>
 
 $$
 \sqrt{\hat{Y_i}} = 1.434 \times 10^2 - 3.762 \times 10^{-4}X_i
@@ -254,14 +236,17 @@ $$
 
 <br>
 
-This results are the ones you are going to use to plot your transformed line to fit your model.
-However, to get your prediction results back to normal you must perform the inverse mathematical function to your linear model function as shown below:
+These results are used to plot the transformed line that fits your model. However, to convert your prediction results back to the original scale, you need to apply the inverse of the transformation used in your linear model, as shown below:
+
+<br>
 
 $$
 \hat{Y_i} = (1.434 \times 10^2 - 3.762 \times 10^{-4}X_i)^2
 $$
-As you can see, to undo the square rooting we did at first, we now turned the prediction results to their square values to get the accuracy needed. 
-This will follow the transformed model and will allow you to get a better fit in your data and model.
+
+<br>
+
+As you can see, to reverse the square root transformation we applied earlier, we now square the prediction results to return them to their original scale. This process aligns with the transformed model and helps achieve a better fit for your data and model.
 
 <br> <br>
 
@@ -276,9 +261,9 @@ plot(CarlmSqrt$residuals)
 
 ```
 
-<br> <br>
+<br>
 
-The Diagnostic Plots for the transformed model look good to me, we can see that only normality is being violated but independence and variance look good enough. I'd say this confirms more that the transformed model can be trusted this time.
+The diagnostic plots for the transformed model look good to me. While there is a violation of normality, the plots for independence and variance appear satisfactory. This suggests that the transformed model can be trusted.
 
 <br> <br>
 
@@ -292,9 +277,9 @@ plot(carLm,which=1:2)
 plot(carLm$residuals)
 ```
 
-<br> <br>
+<br>
 
-The Diagnostic Plots for the original model look decent, however I do see a little more troubles in all diagnostics as compared to the transformed data. However, I wouldn't say this is a horrible untrustworthy diagnostic. I'd say this confirms more that the transformed model can be trusted this time, but that the original is good enough as well.
+The diagnostic plots for the original model look decent, but they show more issues compared to the transformed model. Although the original model is not completely untrustworthy, it reinforces that the transformed model is more reliable. Nevertheless, the original model is still acceptable.
 
 <br> <br>
 
@@ -302,8 +287,10 @@ The Diagnostic Plots for the original model look decent, however I do see a litt
 
 <br>
 
+I originally bought this car for $3,300. When I purchased it in 2021, it had 128,000 miles. It’s currently at 195,000 miles after 3 years. I expect to continue using it, even if I leave Rexburg. I’ll probably take it with me after graduation and use it a while longer. However, if the opportunity arises to sell it, I would consider this study.
 
-I originally bought this car for 3,300 USD. When I bought it in 2021 it had 128,000 miles. It’s currently sitting at 195,000 miles after 3 years. I’m expecting to use even if I leave Rexburg. I’ll probably take it with me after graduation and use it a while longer. However if the chance comes that I can sell it I would take this study in consideration. If the case is that I sell after 220,000 miles, the car would still be selling at 1 thousand even at 300k miles according to the transformed linear model; this means I would be recovering even 1 third of what I bought it for after >4 years of use.
-As for me I can say that enough evidence was found to conclude that this models, preferring the transformed one, can be trusted in their predictions as far as data permits it at this moment. 
+If I sell it after reaching 220,000 miles, the transformed linear model predicts that the car would still be worth $1,000, even at 300,000 miles. This means I could recover about one-third of what I originally paid for it after over 4 years of use.
+
+Overall, there is sufficient evidence to conclude that the models, particularly the transformed one, can be trusted in their predictions, given the current data.
 
 <br> <br>
